contents/en/documents/features: update

--- a/contents/en/documents/features.html
+++ b/contents/en/documents/features.html
@@ -37,15 +37,14 @@
     <tr><th></th><th>Windows</th><th>macOS</th><th>Linux</th><th>FreeBSD</th><th>Web</th><th>Android<a href="#footnote_1">*1</a></th><th>iOS<a href="#footnote_1">*1</a></th></tr>
     <tr><th><div>Graphics</div></th><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td></tr>
     <tr><th>Window</th><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="na">N/A</td><td class="na">N/A</td><td class="na">N/A</td></tr>
-    <tr><th>Keyboard</th><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="no">No<a href="#footnote_2">*2</a></td></tr>
+    <tr><th>Keyboard</th><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td></tr>
     <tr><th>Mouse</th><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="no">No</td><td class="no">No</td></tr>
     <tr><th>Gamepad</th><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="no">No</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td></tr>
-    <tr><th>Touch</th><td class="no">No<a href="#footnote_3">*3</a></td><td class="no">No<a href="#footnote_3">*3</a></td><td class="no">No<a href="#footnote_3">*3</a></td><td class="no">No<a href="#footnote_3">*3</a></td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td></tr>
+    <tr><th>Touch</th><td class="no">No<a href="#footnote_2">*2</a></td><td class="no">No<a href="#footnote_2">*2</a></td><td class="no">No<a href="#footnote_2">*2</a></td><td class="no">No<a href="#footnote_2">*2</a></td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td></tr>
     <tr><th>Audio</th><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td></tr>
   </table>
 </div>
 <ul>
   <li><span id="footnote_1">*1</span> It is assumed to use <a href="/en/documents/mobile.html">ebitenmobile command</a> on mobile platforms.</li>
-  <li><span id="footnote_2">*2</span> <a href="https://github.com/hajimehoshi/ebiten/issues/1090">Issue #1090</a></li>
-  <li><span id="footnote_3">*3</span> <a href="https://github.com/hajimehoshi/ebiten/issues/417">Issue #417</a></li>
+  <li><span id="footnote_2">*2</span> <a href="https://github.com/hajimehoshi/ebiten/issues/417">Issue #417</a></li>
 </ul>
