--- a/contents/ja/documents/features.html
+++ b/contents/ja/documents/features.html
@@ -37,15 +37,14 @@
     <tr><th></th><th>Windows</th><th>macOS</th><th>Linux</th><th>FreeBSD</th><th>Web</th><th>Android<a href="#footnote_1">*1</a></th><th>iOS<a href="#footnote_1">*1</a></th></tr>
     <tr><th><div>描画</div></th><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td></tr>
     <tr><th>ウィンドウ</th><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="na">N/A</td><td class="na">N/A</td><td class="na">N/A</td></tr>
-    <tr><th>キーボード</th><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="no">No<a href="#footnote_2">*2</a></td></tr>
+    <tr><th>キーボード</th><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td></tr>
     <tr><th>マウス</th><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="no">No</td><td class="no">No</td></tr>
     <tr><th>ゲームパッド</th><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="no">No</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td></tr>
-    <tr><th>タッチ</th><td class="no">No<a href="#footnote_3">*3</a></td><td class="no">No<a href="#footnote_3">*3</a></td><td class="no">No<a href="#footnote_3">*3</a></td><td class="no">No<a href="#footnote_3">*3</a></td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td></tr>
+    <tr><th>タッチ</th><td class="no">No<a href="#footnote_2">*2</a></td><td class="no">No<a href="#footnote_2">*2</a></td><td class="no">No<a href="#footnote_2">*2</a></td><td class="no">No<a href="#footnote_2">*2</a></td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td></tr>
     <tr><th>音</th><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td><td class="yes">Yes</td></tr>
   </table>
 </div>
 <ul>
   <li><span id="footnote_1">*1</span> モバイルプラットフォームは <a href="/ja/documents/mobile.html">ebitenmobile コマンド</a>を使うことを仮定しています。</li>
-  <li><span id="footnote_2">*2</span> <a href="https://github.com/hajimehoshi/ebiten/issues/1090">Issue #1090</a></li>
-  <li><span id="footnote_3">*3</span> <a href="https://github.com/hajimehoshi/ebiten/issues/417">Issue #417</a></li>
+  <li><span id="footnote_2">*2</span> <a href="https://github.com/hajimehoshi/ebiten/issues/417">Issue #417</a></li>
 </ul>
