contents/en/documents/2.6: v2.6.1 released

--- a/contents/en/documents/2.6.html
+++ b/contents/en/documents/2.6.html
@@ -90,3 +90,10 @@
   <li>The type checks for Kage shaders became stricter (<a href="https://github.com/hajimehoshi/ebiten/issues/2256">#2256</a>, <a href="https://github.com/hajimehoshi/ebiten/issues/2712">#2712</a>).</li>
   <li>A build tag <code>ebitenginegldebug</code> was added. When this build tag is specified, all the called OpenGL functions are dumped as log (<a href="https://github.com/hajimehoshi/ebiten/issues/2650">#2650</a>).</li>
 </ul>
+<h2>v2.6.1</h2>
+<h3>Bug Fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/118?closed=1">Issues for v2.6.1</a></p>
+<ul>
+  <li>Fixed an issue where crashes could occur when using multiple monitors on macOS (<a href="https://github.com/hajimehoshi/ebiten/issues/2794">#2794</a>).</li>
+  <li>Fixed an issue where <code>ebiten.SetWindowIcon(nil)</code> did not reset the icon (<a href="https://github.com/hajimehoshi/ebiten/issues/2796">#2796</a>).</li>
+</ul>
