--- a/contents/ja/documents/2.6.html
+++ b/contents/ja/documents/2.6.html
@@ -90,3 +90,10 @@
   <li>Kage シェーダの型検査が厳密になりました (<a href="https://github.com/hajimehoshi/ebiten/issues/2256">#2256</a>、<a href="https://github.com/hajimehoshi/ebiten/issues/2712">#2712</a>)。</li>
   <li>ビルドタグ <code>ebitenginegldebug</code> が追加されました。このビルドタグが指定されたとき、呼び出された OpenGL 関数をすべてログとしてダンプします (<a href="https://github.com/hajimehoshi/ebiten/issues/2650">#2650</a>)。</li>
 </ul>
+<h2>v2.6.1</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/118?closed=1">Issues for v2.6.1</a></p>
+<ul>
+  <li>macOS で複数モニターを使用したときにクラッシュすることがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2794">#2794</a>)。</li>
+  <li><code>ebiten.SetWindowIcon(nil)</code> がアイコンをリセットしなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2796">#2796</a>)。</li>
+</ul>
