--- a/contents/index.html
+++ b/contents/index.html
@@ -87,6 +87,12 @@
       <figcaption><a href="https://github.com/davidroman0O">David Roman</a></figcaption>
     </figure>
   </div>
+  <div class="grid-item-1">
+    <figure>
+      <p class="img avatar"><a href="https://github.com/aethiopicuschan"><img src="https://github.com/aethiopicuschan.png?size=168" width="168"></a></p>
+      <figcaption><a href="https://github.com/aethiopicuschan">aethiopicuschan</a></figcaption>
+    </figure>
+  </div>
 </div>
 <p class="img" style="justify-content: start;">
   <iframe src="https://github.com/sponsors/hajimehoshi/button" title="Sponsor hajimehoshi" height="35" width="116" style="border: 0;"></iframe>
