--- a/contents/ja/index.html
+++ b/contents/ja/index.html
@@ -90,7 +90,7 @@
   <div class="grid-item-1">
     <figure>
       <p class="img avatar"><a href="https://github.com/aethiopicuschan"><img src="https://github.com/aethiopicuschan.png?size=168" width="168"></a></p>
-      <figcaption><a href="https://github.com/aethiopicuschan">チャン・エチオピクスさん</a></figcaption>
+      <figcaption><a href="https://github.com/aethiopicuschan">Chan Aethiopicus さん</a></figcaption>
     </figure>
   </div>
 </div>
