--- a/contents/ja/documents/2.6.html
+++ b/contents/ja/documents/2.6.html
@@ -97,3 +97,9 @@
   <li>macOS で複数モニターを使用したときにクラッシュすることがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2794">#2794</a>)。</li>
   <li><code>ebiten.SetWindowIcon(nil)</code> がアイコンをリセットしなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2796">#2796</a>)。</li>
 </ul>
+<h2>v2.6.2</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/119?closed=1">Issues for v2.6.2</a></p>
+<ul>
+  <li><code>ebiten.RunGame</code> を呼ぶ前に作られた <code>ebiten.Image</code> の内部状態が GC で解放されなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2805">#2805</a>)。</li>
+</ul>
