contents/ja/examples/index: update

--- a/contents/ja/examples/index.html
+++ b/contents/ja/examples/index.html
@@ -1,4 +1,5 @@
 <h1>サンプル</h1>
+<p>下記のサンプル以外にも、<a href="https://github.com/hajimehoshi/ebiten/tree/main/examples">examples ディレクトリ</a>にサンプルが多数あります。 Ebitengine を使ったオープンソースのフレームワーク、ライブラリ、ソフトウェアのキュレーションリスト <a href="https://github.com/sedyh/awesome-ebiten">The Awesome Ebiten repository</a> もご参照ください。</p>
 <h2>グラフィックス (基本)</h2>
 <div class="grid-container">
   <div class="grid-item-1">
@@ -170,7 +171,6 @@
     <p class="img thumbnail"><a href="flappy.html"><img src="/images/examples/flappy.png" width="400" height="300" alt="Flappy"></a></p>
   </div>
 </div>
-<p>もっと他のサンプルを見たい場合、<a href="https://github.com/sedyh/awesome-ebiten">Awesome Ebiten</a> に Ebiten 製オープンソースゲームへのリンクが載っています。</p>
 <script>
   window.addEventListener('DOMContentLoaded', () => {
       setTOCLevel(2);
