contents/index: update

--- a/contents/ja/index.html
+++ b/contents/ja/index.html
@@ -93,6 +93,12 @@
       <figcaption><a href="https://github.com/aethiopicuschan">Chan Aethiopicus さん</a></figcaption>
     </figure>
   </div>
+  <div class="grid-item-1">
+    <figure>
+      <p class="img avatar"><img src="https://github.com/github.png?size=168" width="168"></p>
+      <figcaption>(他一名)</figcaption>
+    </figure>
+  </div>
 </div>
 <p class="img" style="justify-content: start;">
   <iframe src="https://github.com/sponsors/hajimehoshi/button" title="Sponsor hajimehoshi" height="35" width="116" style="border: 0;"></iframe>
