contents/en/documents/2.6: v2.6.3 released

--- a/contents/ja/documents/2.6.html
+++ b/contents/ja/documents/2.6.html
@@ -103,3 +103,11 @@
 <ul>
   <li><code>ebiten.RunGame</code> を呼ぶ前に作られた <code>ebiten.Image</code> の内部状態が GC で解放されなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2805">#2805</a>)。</li>
 </ul>
+<h2>v2.6.3</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/120?closed=1">Issues for v2.6.3</a></p>
+<ul>
+  <li>Kage シェーダーで、ブラウザで整数リテラルを配列に用いるとエラーになる問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2840">#2840</a>)。</li>
+  <li><code>EBITENGINE_SCREENSHOT_KEY</code> 環境変数および <code>EBITEN_INTERNAL_IMAGES_KEY</code> 環境変数で取得できるスクリーンショットのファイル名フォーマットが間違っていた問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2844">#2844</a>)。</li>
+  <li>Kage シェーダーで、インデクサに使用した変数が未使用変数とみなされてしまう問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2848">#2848</a>)。</li>
+</ul>
