--- a/contents/en/documents/2.6.html
+++ b/contents/en/documents/2.6.html
@@ -103,3 +103,11 @@
 <ul>
   <li>Fixed an issue where the internal state of <code>ebiten.Image</code> created before calling <code>ebiten.RunGame</code> was not released by the GC (<a href="https://github.com/hajimehoshi/ebiten/issues/2805">#2805</a>).</li>
 </ul>
+<h2>v2.6.3</h2>
+<h3>Bug Fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/120?closed=1">Issues for v2.6.3</a></p>
+<ul>
+  <li>Fix for the issue where using integer literals as arrays in the Kage shader causes errors in browsers (<a href="https://github.com/hajimehoshi/ebiten/issues/2840">#2840</a>).</li>
+  <li>Correction of the file name format for screenshots obtained with the <code>EBITENGINE_SCREENSHOT_KEY</code> and <code>EBITEN_INTERNAL_IMAGES_KEY</code> environment variables, which was incorrect (<a href="https://github.com/hajimehoshi/ebiten/issues/2844">#2844</a>).</li>
+  <li>Fix for the issue in the Kage shader where variables used as indexers were mistakenly considered as unused variables (<a href="https://github.com/hajimehoshi/ebiten/issues/2848">#2848</a>).</li>
+</ul>
