Fix environment variable typo in 2.6.html - EN/JA

--- a/contents/en/documents/2.6.html
+++ b/contents/en/documents/2.6.html
@@ -57,7 +57,7 @@
 <h3>DirectX 11 driver</h3>
 <p>(<a href="https://github.com/hajimehoshi/ebiten/issues/2613">#2613</a>)</p>
 <p>A DirectX 11 driver was implemented. This is used as the default instead of the existing DirectX 12 driver. The DirectX 11 driver is relatively stable and resolved crashes due to the DirectX 12 driver (<a href="https://github.com/hajimehoshi/ebiten/issues/2198">#2198</a>). Also, this resolved somes issues, such as not being able to capture with OBS (<a href="https://github.com/hajimehoshi/ebiten/issues/2148">#2148</a>).</p>
-<p>You can also use the DirectX 12 driver by specifying <code>version=12</code> at the environment variable <code>EBITENGNIE_DIRECTX</code>.</p>
+<p>You can also use the DirectX 12 driver by specifying <code>version=12</code> at the environment variable <code>EBITENGINE_DIRECTX</code>.</p>
 <h3>Text input with IME (experimental)</h3>
 <p>(<a href="https://github.com/hajimehoshi/ebiten/issues/1029">#1029</a>)</p>
 <p>An experimental package <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/exp/textinput"><code>exp/textinput</code></a> to input texts with IME was added. This works only on macOS and browsers so far. As an example, you can see <code>examples/textinput</code>. As this is still an experiment, APIs may change in the future.</p>
