--- a/contents/ja/documents/2.6.html
+++ b/contents/ja/documents/2.6.html
@@ -57,7 +57,7 @@
 <h3>DirectX 11 ドライバ</h3>
 <p>(<a href="https://github.com/hajimehoshi/ebiten/issues/2613">#2613</a>)</p>
 <p>DirectX 11 ドライバが実装されました。今までの DirectX 12 ドライバに代わってデフォルトで使用されます。 DirectX 11 ドライバは比較的安定しており、これにより DirectX 12 ドライバ由来のクラッシュがなくなりました (<a href="https://github.com/hajimehoshi/ebiten/issues/2198">#2198</a>)。また OBS などでキャプチャできなかった問題などが解決しました (<a href="https://github.com/hajimehoshi/ebiten/issues/2148">#2148</a>)。</p>
-<p><code>EBITENGNIE_DIRECTX</code> 環境変数に <code>version=12</code> を指定することで、 DirectX 12 ドライバを使用することもできます。</p>
+<p><code>EBITENGINE_DIRECTX</code> 環境変数に <code>version=12</code> を指定することで、 DirectX 12 ドライバを使用することもできます。</p>
 <h3>IME によるテキスト入力 (試験版)</h3>
 <p>(<a href="https://github.com/hajimehoshi/ebiten/issues/1029">#1029</a>)</p>
 <p>IME によるテキスト入力を行うための実験的パッケージ <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/exp/textinput"><code>exp/textinput</code></a> が追加されました。現在のところ macOS とブラウザでのみ動きます。サンプルとして <code>examples/textinput</code> があります。まだ試験版なので、 API が今後変わるおそれがあります。</p>
