--- a/contents/en/documents/mobile.html
+++ b/contents/en/documents/mobile.html
@@ -35,13 +35,10 @@ func Dummy() {}</code></pre>
 <h3>Android</h3>
 <p>The minimum required Android SDK version is 16.</p>
 <p>Set up these environment variables:</p>
-<ul>
-  <li><code>ANDROID_HOME</code></li>
-  <li><code>ANDROID_NDK_HOME</code> (Optional)</li>
-</ul>
-<p><code>ANDROID_NDK_HOME</code> is optional. If <code>$ANDROID_HOME/ndk-bundle</code> exists, you don't have to set this. Even if this directory doesn't exist, you can create <code>ndk-bundle</code> as a symbolic link like:</li>
-<pre><code>cd $ANDROID_HOME
-ln -s ndk/&lt;NDK version&gt; ndk-bundle</code></pre>
+<pre><code># macOS
+export ANDROID_HOME=~/Library/Android/sdk
+export PATH=/Applications/Android\ Studio.app/Contents/jbr/Contents/Home/bin:$PATH</code></pre>
+<p>(TODO: Environment variables for Windows)</p>
 <p>Run <code>ebitenmobile bind</code> command for your package:</p>
 <pre><code>cd /path/to/yourgame
 ebitenmobile bind -target android -javapkg your.package.name -o path/to/yourgame.aar .</code></pre>
