contents/en/documents/2.6: v2.6.4 released

--- a/contents/en/documents/2.6.html
+++ b/contents/en/documents/2.6.html
@@ -111,3 +111,9 @@
   <li>Correction of the file name format for screenshots obtained with the <code>EBITENGINE_SCREENSHOT_KEY</code> and <code>EBITEN_INTERNAL_IMAGES_KEY</code> environment variables, which was incorrect (<a href="https://github.com/hajimehoshi/ebiten/issues/2844">#2844</a>).</li>
   <li>Fix for the issue in the Kage shader where variables used as indexers were mistakenly considered as unused variables (<a href="https://github.com/hajimehoshi/ebiten/issues/2848">#2848</a>).</li>
 </ul>
+<h2>v2.6.4</h2>
+<h3>Bug Fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/121?closed=1">Issues for v2.6.4</a></p>
+<ul>
+  <li>Fixed an issue where ebitenmobile did not work with the latest gomobile (<a href="https://github.com/hajimehoshi/ebiten/issues/2887">#2887</a>).</li>
+</ul>
