--- a/contents/ja/documents/2.6.html
+++ b/contents/ja/documents/2.6.html
@@ -111,3 +111,9 @@
   <li><code>EBITENGINE_SCREENSHOT_KEY</code> 環境変数および <code>EBITEN_INTERNAL_IMAGES_KEY</code> 環境変数で取得できるスクリーンショットのファイル名フォーマットが間違っていた問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2844">#2844</a>)。</li>
   <li>Kage シェーダーで、インデクサに使用した変数が未使用変数とみなされてしまう問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2848">#2848</a>)。</li>
 </ul>
+<h2>v2.6.4</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/121?closed=1">Issues for v2.6.4</a></p>
+<ul>
+  <li>最新の gomobile で ebitenmobile が動かなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2887">#2887</a>)。</li>
+</ul>
