--- a/contents/en/documents/2.6.html
+++ b/contents/en/documents/2.6.html
@@ -117,3 +117,10 @@
 <ul>
   <li>Fixed an issue where ebitenmobile did not work with the latest gomobile (<a href="https://github.com/hajimehoshi/ebiten/issues/2887">#2887</a>).</li>
 </ul>
+<h2>v2.6.5</h2>
+<h3>Bug Fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/122?closed=1">Issues for v2.6.5</a></p>
+<ul>
+  <li>Fixed an issue where rendering did not work correctly on 32bit Windows using Go 1.22 and DirectX 12 (<a href="https://github.com/hajimehoshi/ebiten/issues/2867">#2867</a>).</li>
+  <li>Fixed an issue where the CPU would become busy when using <code>SetVsyncEnabled(false)</code> and <code>SetScreenClearedEveryFrame(false)</code> (<a href="https://github.com/hajimehoshi/ebiten/issues/2890">#2890</a>).</li>
+</ul>
