--- a/contents/en/documents/faq.html
+++ b/contents/en/documents/faq.html
@@ -11,10 +11,9 @@
 <h3>Is it possible to cross-compile an application with Ebitengine?</h3>
 <p>Yes and no. If the target is Windows or Wasm, yes. Otherwise, it is almost impossible to cross-compile due to Cgo unfortunately. See also <a href="https://github.com/golang/go/issues/18296">Go issue #18296</a>.</p>
 <h2>Graphics</h2>
-<h3>How to draw lines?</h3>
-<p>Use <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/ebitenutil#DrawLine"><code>ebitenutil.DrawLine</code></a>. Note that this function is only for debugging and prototyping only.</p>
-<p>See <a href="https://github.com/hajimehoshi/ebiten/issues/137">the discussion #137</a> on other primitive drawings.</p>
-<h3>How to take a screenshot?</h3>
+<h3>How can I draw lines?</h3>
+<p>Use <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/vector#StrokeLine"><code>vector.StrokeLine</code></a>.</p>
+<h3>How can I take a screenshot?</h3>
 <p>Specify the key to environment variable <code>EBITENGINE_SCREENSHOT_KEY</code> and you can take a screenshot by pressing the specified key.</p>
 <pre><code>EBITENGINE_SCREENSHOT_KEY=q go run .</code></pre>
 <h3>Ebitengine's screen is scaled (and blurred) on hi-DPI screen. Can I disable this scaling? In other words, can I have a hi-DPI mode?</h3>
