--- a/contents/ja/documents/2.6.html
+++ b/contents/ja/documents/2.6.html
@@ -124,3 +124,9 @@
   <li>32bit Windows 上で Go 1.22 と DirectX 12 使用時に正しく描画できなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2867">#2867</a>)。</li>
   <li><code>SetVsyncEnabled(false)</code> と <code>SetScreenClearedEveryFrame(false)</code> 使用時に CPU がビジー状態になる問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2890">#2890</a>)。</li>
 </ul>
+<h2>v2.6.6</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/123?closed=1">Issues for v2.6.6</a></p>
+<ul>
+  <li>Intel macOS 上で Go 1.22 でビルドすると起動しなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2908">#2908</a>)。</li>
+</ul>
