contents/en/documents/2.6: update

--- a/contents/en/documents/2.6.html
+++ b/contents/en/documents/2.6.html
@@ -128,5 +128,5 @@
 <h3>Bug Fixes</h3>
 <p><a href="https://github.com/hajimehoshi/ebiten/milestone/123?closed=1">Issues for v2.6.6</a></p>
 <ul>
-  <li>Fixed an issue where building with Go 1.22 on Intel macOS would not start (<a href="https://github.com/hajimehoshi/ebiten/issues/2908">#2908</a>).</li>
+  <li>Fixed the issue where applications did not launch when built with Go 1.22 on Intel macOS (<a href="https://github.com/hajimehoshi/ebiten/issues/2908">#2908</a>).</li>
 </ul>
