--- a/contents/ja/documents/2.6.html
+++ b/contents/ja/documents/2.6.html
@@ -128,5 +128,5 @@
 <h3>バグ修正</h3>
 <p><a href="https://github.com/hajimehoshi/ebiten/milestone/123?closed=1">Issues for v2.6.6</a></p>
 <ul>
-  <li>Intel macOS 上で Go 1.22 でビルドすると起動しなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2908">#2908</a>)。</li>
+  <li>Intel macOS 上で Go 1.22 でビルドするとアプリケーションが起動しなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2908">#2908</a>)。</li>
 </ul>
