--- a/contents/index.html
+++ b/contents/index.html
@@ -72,6 +72,12 @@
       <figcaption><a href="https://symbolic.software/">Symbolic Software</a><br>(Works: <a href="https://drkobushi.com">Dr. Kobushi's Labyrinthine Laboratory</a>)</figcaption>
     </figure>
   </div>
+  <div class="grid-item-2">
+    <figure>
+      <p class="img avatar"><a href="https://github.com/silbinarywolf"><img src="https://github.com/shioridotdev.png?size=168" width="168"></a></p>
+      <figcaption><a href="https://github.com/shioridotdev">dot</a></figcaption>
+    </figure>
+  </div>
 </div>
 <h3>Silver</h3>
 <div class="grid-container">
