--- a/contents/ja/index.html
+++ b/contents/ja/index.html
@@ -72,6 +72,12 @@
       <figcaption><a href="https://symbolic.software/">Symbolic Software</a><br>(作品: <a href="https://drkobushi.com">こぶし博士の迷宮研究所</a>)</figcaption>
     </figure>
   </div>
+  <div class="grid-item-2">
+    <figure>
+      <p class="img avatar"><a href="https://github.com/silbinarywolf"><img src="https://github.com/shioridotdev.png?size=168" width="168"></a></p>
+      <figcaption><a href="https://github.com/shioridotdev">ドットさん</a></figcaption>
+    </figure>
+  </div>
 </div>
 <h3>シルバー</h3>
 <div class="grid-container">
