contents/index: fix links

--- a/contents/ja/index.html
+++ b/contents/ja/index.html
@@ -74,7 +74,7 @@
   </div>
   <div class="grid-item-2">
     <figure>
-      <p class="img avatar"><a href="https://github.com/silbinarywolf"><img src="https://github.com/shioridotdev.png?size=168" width="168"></a></p>
+      <p class="img avatar"><a href="https://github.com/shioridotdev"><img src="https://github.com/shioridotdev.png?size=168" width="168"></a></p>
       <figcaption><a href="https://github.com/shioridotdev">ドットさん</a></figcaption>
     </figure>
   </div>
