--- a/contents/ja/documents/shader.html
+++ b/contents/ja/documents/shader.html
@@ -231,7 +231,8 @@ v2.xyz = v2.xxx        // Get vec3(1, 1, 1), and set it to all the components to
 <h2>エディタのプラグイン</h2>
 <p>Kage プログラムを編集するための、有志によるエディタプラグインがあります。</p>
 <ul>
-  <li><a href="https://github.com/sedyh/ebitengine-kage-vscode">Visual Studio Code</a></li>
-  <li><a href="https://github.com/sedyh/ebitengine-kage-vim">Vim</a></li>
+  <li><a href="https://github.com/TLINDEN/kage-mode">Emacs</a></li>
   <li><a href="https://github.com/sedyh/ebitengine-kage-sublime">Sublime</a></li>
+  <li><a href="https://github.com/sedyh/ebitengine-kage-vim">Vim</a></li>
+  <li><a href="https://github.com/sedyh/ebitengine-kage-vscode">Visual Studio Code</a></li>
 </ul>
