--- a/contents/en/documents/shader.html
+++ b/contents/en/documents/shader.html
@@ -7,31 +7,7 @@
 <pre><code>go run github.com/hajimehoshi/ebiten/v2/examples/shader@latest</code></pre>
 <p>Ebitengine adopts an original shading language 'Kage'. This has a compatible syntax with Go, but the details are different. Kage has high portability. Ebitengine uses graphics libraries like OpenGL or Metal and this depends on environments, but Kage is compiled on the fly so that this works equally everywhere.</p>
 <h2>Example</h2>
-<pre><code>package main
-
-// Specify the 'pixel' mode.
-//kage:unit pixels
-
-// Uniform variables.
-var Time float
-var Cursor vec2
-var ScreenSize vec2
-
-// Fragment is the entry point of the fragment shader.
-// Fragment returns the color value for the current position.
-func Fragment(dstPos vec4, srcPos vec2, color vec4) vec4 {
-	// You can define variables with a short variable declaration like Go.
-	pos := position.xy - imageDstOrigin()
-	lightpos := vec3(Cursor, 50)
-	lightdir := normalize(lightpos - pos.xyz)
-	normal := normalize(imageSrc1UnsafeAt(srcPos) - 0.5)
-	const ambient = 0.25
-	diffuse := 0.75 * max(0.0, dot(normal.xyz, lightdir))
-
-	// You can treat multiple source images by
-	// imageSrc[N]At or imageSrc[N]UnsafeAt.
-	return imageSrc0UnsafeAt(srcPos) * (ambient + diffuse)
-}</code></pre>
+<pre data-codesrc="https://raw.githubusercontent.com/hajimehoshi/ebiten/main/examples/shader/lighting.go" data-codelinerange="17-"></pre>
 <p class="img"><video controls autoplay src="/images/documents/shader/lighting.mp4" width="456"></p>
 <h2>Ebitengine API</h2>
 <h3><code>NewShader</code></h3>
