--- a/contents/ja/documents/shader.html
+++ b/contents/ja/documents/shader.html
@@ -7,31 +7,7 @@
 <pre><code>go run github.com/hajimehoshi/ebiten/v2/examples/shader@latest</code></pre>
 <p>Ebitengine はシェーディング言語として Kage という独自言語を採用しています。これは Go 互換の文法を持ちますが、細部が Go とは異なります。 Kage は高いポータビリティを持ちます。 Ebitengine は環境によって OpenGL や Metal などをグラフィックスライブラリとして使いますが、 Kage はどの環境でも同様に動くように、動的にコンパイルされます。</p>
 <h2>例</h2>
-<pre><code>package main
-
-// Specify the 'pixel' mode.
-//kage:unit pixels
-
-// Uniform variables.
-var Time float
-var Cursor vec2
-var ScreenSize vec2
-
-// Fragment is the entry point of the fragment shader.
-// Fragment returns the color value for the current position.
-func Fragment(dstPos vec4, srcPos vec2, color vec4) vec4 {
-	// You can define variables with a short variable declaration like Go.
-	pos := position.xy - imageDstOrigin()
-	lightpos := vec3(Cursor, 50)
-	lightdir := normalize(lightpos - pos.xyz)
-	normal := normalize(imageSrc1UnsafeAt(srcPos) - 0.5)
-	const ambient = 0.25
-	diffuse := 0.75 * max(0.0, dot(normal.xyz, lightdir))
-
-	// You can treat multiple source images by
-	// imageSrc[N]At or imageSrc[N]UnsafeAt.
-	return imageSrc0UnsafeAt(srcPos) * (ambient + diffuse)
-}</code></pre>
+<pre data-codesrc="https://raw.githubusercontent.com/hajimehoshi/ebiten/main/examples/shader/lighting.go" data-codelinerange="17-"></pre>
 <p class="img"><video controls autoplay src="/images/documents/shader/lighting.mp4" width="456"></p>
 <h2>Ebitengine API</h2>
 <h3><code>NewShader</code></h3>
