contents/en/documents/2.6: v2.6.7 released

--- a/contents/en/documents/2.6.html
+++ b/contents/en/documents/2.6.html
@@ -130,3 +130,9 @@
 <ul>
   <li>Fixed the issue where applications did not launch when built with Go 1.22 on Intel macOS (<a href="https://github.com/hajimehoshi/ebiten/issues/2908">#2908</a>).</li>
 </ul>
+<h2>v2.6.7</h2>
+<h3>Bug Fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/125?closed=1">Issues for v2.6.7</a></p>
+<ul>
+  <li>Fixed the issue where trigger buttons on a gamepad were not functioning correctly on Android (<a href="https://github.com/hajimehoshi/ebiten/issues/2598">#2598</a>).</li>
+</ul>
