--- a/contents/ja/documents/2.6.html
+++ b/contents/ja/documents/2.6.html
@@ -130,3 +130,9 @@
 <ul>
   <li>Intel macOS 上で Go 1.22 でビルドするとアプリケーションが起動しなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2908">#2908</a>)。</li>
 </ul>
+<h2>v2.6.7</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/125?closed=1">Issues for v2.6.7</a></p>
+<ul>
+  <li>Android でゲームパッドのトリガーボタンが正しく動かない事があった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2598">#2598</a>)。</li>
+</ul>
