contents/index: update links

--- a/contents/index.html
+++ b/contents/index.html
@@ -74,8 +74,8 @@
   </div>
   <div class="grid-item-2">
     <figure>
-      <p class="img avatar"><a href="https://github.com/shioridotdev"><img src="https://github.com/shioridotdev.png?size=168" width="168"></a></p>
-      <figcaption><a href="https://github.com/shioridotdev">dot</a></figcaption>
+      <p class="img avatar"><a href="https://github.com/ourdungeon"><img src="https://github.com/ourdungeon.png?size=168" width="168"></a></p>
+      <figcaption><a href="https://github.com/ourdungeon">dot</a></figcaption>
     </figure>
   </div>
 </div>
