contents/en/documents/2.7: remove a share image

--- a/contents/ja/documents/2.7.html
+++ b/contents/ja/documents/2.7.html
@@ -13,7 +13,7 @@
   <li>その他バグ修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/498">#498</a>、 <a href="https://github.com/hajimehoshi/ebiten/issues/2669">#2669</a>)</li>
 </ul>
 <figure>
-  <p class="img"><img id="meta-share" src="/images/documents/2.7/i18n.png" width="360" ></p>
+  <p class="img"><img src="/images/documents/2.7/i18n.png" width="360" ></p>
 </figure>
 <p>使い方については、次のサンプルを参考にしてください。</p>
 <ul>
