contents/en/documents/2.7: add KeyIntlBackslash

--- a/contents/ja/documents/2.7.html
+++ b/contents/ja/documents/2.7.html
@@ -36,6 +36,7 @@
   <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#Monitor.Size"><code>(*ebiten.Monitor).Size</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/2795">#2795</a>)</li>
   <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#NonZero"><code>ebiten.NonZero</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/2782">#2782</a>)</li>
   <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#KeyF13"><code>ebiten.KeyF13</code></a> 〜 <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#KeyF24"><code>ebiten.KeyF24</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/2801">#2801</a>)</li>
+  <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#KeyIntlBackslash"><code>ebiten.KeyIntlBackslash</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/2921">#2921</a>)</li>
   <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#MaxVertexCount"><code>ebiten.MaxVertexCount</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/2828">#2828</a>)</li>
   <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#RunGameOptions.SingleThread"><code>ebiten.RunGameOptions.SingleThread</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/2830">#2830</a>)</li>
   <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#RunGameOptions.X11ClassName"><code>ebiten.RunGameOptions.X11ClassName</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/2904">#2904</a>)</li>
