contents/en/documents: add Shader.Deallocate

--- a/contents/en/documents/2.7.html
+++ b/contents/en/documents/2.7.html
@@ -42,6 +42,7 @@
   <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#RunGameOptions.SingleThread"><code>ebiten.RunGameOptions.SingleThread</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/2830">#2830</a>)</li>
   <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#RunGameOptions.X11ClassName"><code>ebiten.RunGameOptions.X11ClassName</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/2904">#2904</a>)</li>
   <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#RunGameOptions.X11InstanceName"><code>ebiten.RunGameOptions.X11InstanceName</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/2904">#2904</a>)</li>
+  <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#Shader.Deallocate"><code>(*ebiten.Shader).Deallocate</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/2808">#2808</a>)</li>
   <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/mobile#RunOnJVM"><code>mobile.RunOnJVM</code></a> (<a href="https://github.com/hajimehoshi/ebiten/issues/2748">#2748</a>)</li>
 </ul>
 <h3>Bug Fixes</h3>
@@ -74,6 +75,11 @@ Factor</code></a></td>
     <td><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#ScreenSizeInFullscreen"><code>ebiten.ScreenSizeInFullscreen</code></a></td>
     <td><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#Monitor"><code>ebiten.Monitor</code></a> and <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#Monitor.Size"><code>(*ebiten.Monitor).Size</code></a></td>
     <td><a href="https://github.com/hajimehoshi/ebiten/issues/2795">#2795</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#Shader.Dispose"><code>(*ebiten.Shader).Dispose</code></a></td>
+    <td><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#Shader.Deallocate"><code>(*ebiten.Shader).Deallocate</code></a></td>
+    <td><a href="https://github.com/hajimehoshi/ebiten/issues/2808">#2808</a></td>
   </tr>
   <tr>
     <td>Build tag <code>ebitenginesinglethread</code></td>
