contents/en/examples: add texti18n

--- a/contents/en/examples/index.html
+++ b/contents/en/examples/index.html
@@ -118,6 +118,10 @@
     <p class="img thumbnail"><a href="shader.html"><img src="/images/examples/shader.png" width="320" height="240" alt="Shader"></a></p>
   </div>
   <div class="grid-item-1">
+    <h3>Text (i18n)</h3>
+    <p class="img thumbnail"><a href="texti18n.html"><img src="/images/examples/texti18n.png" width="320" height="240" alt="Text (i18n)"></a></p>
+  </div>
+  <div class="grid-item-1">
     <h3>Vector Graphics</h3>
     <p class="img thumbnail"><a href="vector.html"><img src="/images/examples/vector.png" width="320" height="240" alt="Vector Graphics"></a></p>
   </div>
