--- a/contents/ja/examples/nav.html
+++ b/contents/ja/examples/nav.html
@@ -32,6 +32,7 @@
   <li><a href="perspective.html">Perspective</a></li>
   <li><a href="raycasting.html">Ray Casting</a></li>
   <li><a href="shader.html">Shader</a></li>
+  <li><a href="texti18n.html">Text (i18n)</a></li>
   <li><a href="vector.html">Vector Graphics</a></li>
 </ul>
 <h3>入力</h3>
