contents/en/documents/2.7: Ebitengine v2.7.2 released

--- a/contents/en/documents/2.7.html
+++ b/contents/en/documents/2.7.html
@@ -99,3 +99,9 @@ Factor</code></a></td>
   <li>Fixed an issue where <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#SetWindowSize"><code>ebiten.SetWindowSize</code></a> before <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#RunGame"><code>ebiten.RunGame</code></a> did not work correctly in the Linux i3wm desktop environment (<a href="https://github.com/hajimehoshi/ebiten/issues/2951">#2951</a>).</li>
   <li>Fixed an issue where <code>GeoM</code> of the options argument in the the <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/text/v2"><code>text/v2</code></a> package's <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/text/v2#Draw"><code>Draw</code></a> function was unintentionally modified (<a href="https://github.com/hajimehoshi/ebiten/issues/2954">#2954</a>).</li>
 </ul>
+<h2>v2.7.2</h2>
+<h3>Bug Fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/127?closed=1">Issues for v2.7.2</a></p>
+<ul>
+  <li>Fixed an issue where the standard gamepad mapping was not working (<a href="https://github.com/hajimehoshi/ebiten/issues/2964">#2964</a>).</li>
+</ul>
