--- a/contents/ja/documents/2.7.html
+++ b/contents/ja/documents/2.7.html
@@ -95,3 +95,9 @@
   <li>Linux の i3wm デスクトップ環境で <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#RunGame"><code>ebiten.RunGame</code></a> 前の <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#SetWindowSize"><code>ebiten.SetWindowSize</code></a> が正しく動かないことがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2951">#2951</a>)。</li>
   <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/text/v2"><code>text/v2</code></a> パッケージの <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/text/v2#Draw"><code>Draw</code></a> 関数で、オプション引数の <code>GeoM</code> が意図せず変更されてしまう問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2954">#2954</a>)。</li>
 </ul>
+<h2>v2.7.2</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/127?closed=1">Issues for v2.7.2</a></p>
+<ul>
+  <li>ゲームパッドの標準マッピングが動かなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2964">#2964</a>)。</li>
+</ul>
