--- a/contents/ja/documents/shader.html
+++ b/contents/ja/documents/shader.html
@@ -75,7 +75,7 @@
   <tr><th>名前</th><th>型</th><th>説明</th></tr>
   <tr><td><code>dstPos</code></td><td><code>vec4</code><td>描画先の座標。単位はピクセル。第 3、第 4 要素は常にそれぞれ 0、 1。</td></tr>
   <tr><td><code>srcPos</code></td><td><code>vec2</code><td>描画元テクスチャの座標。単位はテクセルまたはピクセルで、単位モードによる。</td></tr>
-  <tr><td><code>color</code></td><td><code>vec4</code><td>頂点から与えられる補助的な色情報。各要素は 0 から 1 の値。 <code>DrawTrianglesShader</code> 関数使用時にのみ意味を持つ。</td></tr>
+  <tr><td><code>color</code></td><td><code>vec4</code><td>頂点から与えられる補助的な色情報。各要素は 0 から 1 の値。この値は <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#DrawRectShaderOptions.ColorScale"><code>DrawRectShaderOptions.ColorScale</code></a> か <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#Image.DrawTrianglesShader"><code>DrawTrianglesShader</code></a> の頂点情報で指定される。</td></tr>
   <tr><td>(戻り値)</td><td><code>vec4</code><td>現在の座標の色。各要素は 0 から 1 の値。</td></tr>
 </table>
 <h3>組み込み型</h3>
