contents/en/documents/2.7: v2.7.3 released

--- a/contents/en/documents/2.7.html
+++ b/contents/en/documents/2.7.html
@@ -105,3 +105,9 @@ Factor</code></a></td>
 <ul>
   <li>Fixed an issue where the standard gamepad mapping was not working (<a href="https://github.com/hajimehoshi/ebiten/issues/2964">#2964</a>).</li>
 </ul>
+<h2>v2.7.3</h2>
+<h3>Bug Fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/128?closed=1">Issues for v2.7.3</a></p>
+<ul>
+  <li>Fixed an issue where <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#ScreenSizeInFullscreen"><code>ebiten.ScreenSizeInFullscreen</code></a> would crash in the browser (<a href="https://github.com/hajimehoshi/ebiten/issues/2975">#2975</a>).</li>
+</ul>
