--- a/contents/ja/documents/2.7.html
+++ b/contents/ja/documents/2.7.html
@@ -101,3 +101,9 @@
 <ul>
   <li>ゲームパッドの標準マッピングが動かなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2964">#2964</a>)。</li>
 </ul>
+<h2>v2.7.3</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/128?closed=1">Issues for v2.7.3</a></p>
+<ul>
+  <li><a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2#ScreenSizeInFullscreen"><code>ebiten.ScreenSizeInFullscreen</code></a> がブラウザでクラッシュした問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2975">#2975</a>)。</li>
+</ul>
