contents/index: update sponsors

--- a/contents/index.html
+++ b/contents/index.html
@@ -101,6 +101,12 @@
   </div>
   <div class="grid-item-1">
     <figure>
+      <p class="img avatar"><a href="https://github.com/smsunarto"><img src="https://github.com/smsunarto.png?size=168" width="168"></a></p>
+      <figcaption><a href="https://github.com/smsunarto">Scott Sunarto</a></figcaption>
+    </figure>
+  </div>
+  <div class="grid-item-1">
+    <figure>
       <p class="img avatar"><img src="https://github.com/github.png?size=168" width="168"></p>
       <figcaption>(And one other person)</figcaption>
     </figure>
